' Generated by UML Generator
' Encoded: rPHFJyCW6CRl_HGScQIDvyOiKtSnqMJ9l1aFZBwsn8usG3ripiykqBzqRF7gfIaFp_lo_2XbfJILkjcNaVhaegQIxX4hgLBtMak-QpGyiKfi-G7GRLJm313ZafKGHSw5DlnmeEWO8HHdLPCNATgQEf5RGT66mLHW1O3o55tLjNbLANhcIj-r4qldbOtINZUJOJgEpOCeq6kxBFOMNwJeg-9PPzZQ6DWBuniUNIpif_CjhrrE70uywsUZOmzWbiYWu2dFP5fNhOGN0-mfYhZG83yeWtR37nfUPY3Tll_ixA3TXR5FgxReSxNZdSi3uvdVyPprjX0JCGVjibdDlTZSxI5veJ8lG79DpzB7jLNwYlwpXWlmmiu5SKaGbuHnoILS4iGb8Lno1NS3TGso4loFj47_lu6rmpMNm7JLGUvQWjGxgoFjj007lIFwrLKxzuPgytC8jpOvcljCStP2Uye5DiT8zR_HstiFPBfuNoP9bbt_2mSrIRwNFim5uqqSTvt2P-2yKTWtwUDjxw0FvTxq2B82aPbB_HS
' URL: http://www.plantuml.com/plantuml/uml/rPHFJyCW6CRl_HGScQIDvyOiKtSnqMJ9l1aFZBwsn8usG3ripiykqBzqRF7gfIaFp_lo_2XbfJILkjcNaVhaegQIxX4hgLBtMak-QpGyiKfi-G7GRLJm313ZafKGHSw5DlnmeEWO8HHdLPCNATgQEf5RGT66mLHW1O3o55tLjNbLANhcIj-r4qldbOtINZUJOJgEpOCeq6kxBFOMNwJeg-9PPzZQ6DWBuniUNIpif_CjhrrE70uywsUZOmzWbiYWu2dFP5fNhOGN0-mfYhZG83yeWtR37nfUPY3Tll_ixA3TXR5FgxReSxNZdSi3uvdVyPprjX0JCGVjibdDlTZSxI5veJ8lG79DpzB7jLNwYlwpXWlmmiu5SKaGbuHnoILS4iGb8Lno1NS3TGso4loFj47_lu6rmpMNm7JLGUvQWjGxgoFjj007lIFwrLKxzuPgytC8jpOvcljCStP2Uye5DiT8zR_HstiFPBfuNoP9bbt_2mSrIRwNFim5uqqSTvt2P-2yKTWtwUDjxw0FvTxq2B82aPbB_HS
' Generated on: 2025-11-19T15:40:54.580542366

@startuml
skinparam classAttributeIconSize 0
hide circle

class Pizza {
  -dough: String
  -sauce: String
  -cheese: String
  -toppings: List<String>
  -crust: String
  -size: String
  --
  +setDough(dough: String): void
  +setSauce(sauce: String): void
  +setCheese(cheese: String): void
  +setToppings(toppings: List<String>): void
  +setCrust(crust: String): void
  +setSize(size: String): void
  +toString(): String
}

interface PizzaBuilder {
  ~buildDough(): void
  ~buildSauce(): void
  ~buildCheese(): void
  ~buildToppings(): void
  ~buildCrust(): void
  ~buildSize(): void
  ~getPizza(): Pizza
}

class MargheritaPizzaBuilder {
  -pizza: Pizza
  --
  +MargheritaPizzaBuilder()
  +buildDough(): void
  +buildSauce(): void
  +buildCheese(): void
  +buildToppings(): void
  +buildCrust(): void
  +buildSize(): void
  +getPizza(): Pizza
}

class PepperoniPizzaBuilder {
  -pizza: Pizza
  --
  +PepperoniPizzaBuilder()
  +buildDough(): void
  +buildSauce(): void
  +buildCheese(): void
  +buildToppings(): void
  +buildCrust(): void
  +buildSize(): void
  +getPizza(): Pizza
}

class PizzaDirector {
  -builder: PizzaBuilder
  --
  +PizzaDirector(builder: PizzaBuilder)
  +buildPizza(): Pizza
}

class PizzaBuilderPattern {
  +{static} main(args: String[]): void
}

PizzaBuilder ..> Pizza
MargheritaPizzaBuilder ..|> PizzaBuilder
MargheritaPizzaBuilder *-- Pizza
PepperoniPizzaBuilder ..|> PizzaBuilder
PepperoniPizzaBuilder *-- Pizza
PizzaDirector *-- PizzaBuilder
PizzaDirector ..> Pizza
@enduml